--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-    "name": "altp-heir",
-    "version": "1.0.0",
-    "description": "my personal website and blog",
-    "main": "server/server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon  --exec babel-node server/server.js"
-    },
-    "author": "Umuhire heritier",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.0.0",
-        "body-parser": "^1.19.0",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-validator": "^6.6.1",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.10.5",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.11.6",
-        "@babel/node": "^7.10.5",
-        "@babel/preset-env": "^7.11.5",
-        "nodemon": "^2.0.4"
-    }
+  "name": "altp-heir",
+  "version": "1.0.0",
+  "description": "my personal website and blog",
+  "main": "server.js",
+  "scripts": {
+    "test": "mocha --timeout 30000 --require @babel/register",
+    "start": "nodemon  --exec babel-node server/server.js"
+  },
+  "author": "Umuhire heritier",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "esm": "^3.2.25",
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.4"
+  }
 }
