--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --timeout 30000 --require @babel/register",
-    "start": "nodemon  --exec babel-node server/server.js"
+    "start": "nodemon  --exec babel-node server/server.js",
+    "cover": "istanbul cover _mocha --require @babel/register"
   },
   "author": "Umuhire heritier",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "esm": "^3.2.25",
+    "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4"
   }
