--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --timeout 30000 --require @babel/register",
     "start": "nodemon  --exec babel-node server/server.js",
-    "cover": "istanbul cover _mocha --require @babel/register"
+    "cover": "istanbul cover _mocha --timeout 30000 --require @babel/register",
+    "test1": "nyc --reporter=text mocha --timeout 30000 --require @babel/register"
   },
   "author": "Umuhire heritier",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "esm": "^3.2.25",
     "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0"
   }
 }
