--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "my personal website and blog",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 30000 --require @babel/register",
-    "start": "nodemon  --exec babel-node server/server.js",
-    "cover": "istanbul cover _mocha --timeout 30000 --require @babel/register",
-    "test1": "nyc --reporter=text mocha --timeout 30000 --require @babel/register"
+    "coverage": "nyc --reporter=html --reporter=text mocha --timeout 30000 --require dotenv/config --require @babel/register --exit || true",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "test": "nyc mocha --timeout 30000  --require dotenv/config --require @babel/register --exit || true",
+    "start": "nodemon --exec babel-node -r dotenv/config server/server"
   },
   "author": "Umuhire heritier",
   "license": "ISC",
