--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "coverage": "nyc --reporter=html --reporter=text mocha --timeout 30000 --require dotenv/config --require @babel/register --exit || true",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout 30000  --require dotenv/config --require @babel/register --exit || true",
     "start": "nodemon --exec babel-node -r dotenv/config server/server"
   },
@@ -29,9 +30,11 @@
     "@babel/register": "^7.11.5",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coveralls": "^3.1.0",
     "esm": "^3.2.25",
     "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0"
   }
