--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "my personal website and blog",
   "main": "server.js",
   "scripts": {
-    "coverage": "nyc --reporter=html --reporter=text mocha --timeout 30000 --require dotenv/config --require @babel/register --exit || true",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc mocha --timeout 30000  --require dotenv/config --require @babel/register --exit || true",
-    "start": "nodemon --exec babel-node -r dotenv/config server/server",
-    "coverage1": "./coverage/lcov.info | coveralls"
+    "coverage": "nyc --reporter=html --reporter=text mocha --timeout 90000 --require dotenv/config --require @babel/register --exit || true",
+    "test": "nyc mocha --timeout 90000  --require dotenv/config --require @babel/register --exit || true",
+    "start": "nodemon --exec babel-node -r dotenv/config server/server"
+
   },
   "author": "Umuhire heritier",
   "license": "ISC",
