--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "coverage": "nyc --reporter=html --reporter=text mocha --timeout 90000 --require dotenv/config --require @babel/register --exit || true",
     "test": "nyc mocha --timeout 90000  --require dotenv/config --require @babel/register --exit || true",
-    "start": "nodemon --exec babel-node -r dotenv/config server/server"
+    "start": "nodemon --exec babel-node -r server/server"
 
   },
   "author": "Umuhire heritier",
