--- a/package.json
+++ b/package.json
@@ -7,33 +7,35 @@
     "coverage": "nyc --reporter=html --reporter=text mocha --timeout 90000 --require dotenv/config --require @babel/register --exit || true",
     "test": "nyc mocha --timeout 90000  --require dotenv/config --require @babel/register --exit || true",
     "start": "nodemon --exec babel-node server/server"
-
   },
   "author": "Umuhire heritier",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.5",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "coveralls": "^3.1.0",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "glob": "^7.1.6",
     "istanbul": "^0.4.5",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^8.1.3",
     "mocha-lcov-reporter": "^1.3.0",
+    "mongoose": "^5.10.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "swagger-jsdoc": "^4.2.0",
+    "swagger-ui-express": "^4.1.4"
   }
 }
