--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "my personal website and blog",
   "main": "server.js",
   "scripts": {
-    "coverage": "nyc --reporter=html --reporter=text mocha --timeout 90000 --require dotenv/config --require @babel/register --exit || true",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout 90000  --require dotenv/config --require @babel/register --exit || true",
-    "start": "nodemon --exec babel-node server/server"
+    "start": "nodemon --exec babel-node server/server",
+    "ista":"istanbul cover node_modules/mocha/bin/_mocha -- -R spec"
   },
   "author": "Umuhire heritier",
   "license": "ISC",
