--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Make company global travel and accommodation easy and convenient for the strong workforce of savvy members of staff, by leveraging the modern web.",
   "main": "index.js",
   "scripts": {
+    "test": "mocha --require @babel/polyfill --require @babel/register src/test/test.js --timeout 10000",
     "start": "nodemon --exec babel-node ./src/index",
     "lint": "./node_modules/.bin/eslint src/",
     "dev": "./node_modules/.bin/eslint src/ --fix && npm start"
@@ -11,7 +12,13 @@
   "author": "Team Phoniex",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "mocha": "^8.1.3",
+    "sinon": "^9.2.0",
     "swagger-jsdoc": "^4.2.3",
     "swagger-ui-express": "^4.1.4"
   },
