--- a/.env
+++ b/.env
@@ -1,4 +1,19 @@
-PORT=2000
-PSWD=root
-DBNAME=mybrand
-JWT_KEY=JwTkeyFormMy_ForMybraNdProject
+DB_PORT=5432
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=Umusaza36!
+DB_NAME=nomadTest
+DB_DIALECT=postgres
+DATABASE_URL=postgres://postgres:Umusaza36!@localhost:5432/nomadTest
+JWTKEY=cGhvZW5peEJhcmVmb290Tm9tYWQ
+API_VERSION=v1
+EMAIL=nomadbarefoot2@gmail.com
+PASSWORD=nistnvpuhqalrrej
+CLIENT_ID=978352907060-j1m2j5j0upfajnh6ln5idcnr9f4fk551.apps.googleusercontent.com
+CLIENT_SECRET=-ABEMIKgnYnvC3RIrhTQLO-F
+APP_SECRET =5efb78c04b84aead6f3b4587a76d8e2f
+APP_ID =631208460883265
+JWT_SECRET_KEY=barefoot
+appPassword=nistnvpuhqalrrej
+HOST=http://localhost:5000
+PORT=5000
